# upkeep

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  flake.nix  justfile  package-lock.json  package.json  pyproject.toml  static-build.mjs
config/: settings.py  urls.py  wsgi.py
upkeep/core/: admin.py  forms.py  models.py  services.py  views.py
upkeep/core/management/commands/: notify.py
upkeep/core/migrations/: 0001_initial.py  0002_alter_schedule_options_alter_area_name_and_more.py  0003_consumable_url.py  0004_alter_area_name_alter_consumable_quantity_and_more.py  0005_alter_task_unique_together.py  0006_alter_consumable_name.py
upkeep/core/tests/: area_test.py  models_test.py  services_test.py  task_test.py  views_test.py
upkeep/ui/static/ui/: main.css  main.css.REMOVED.git-id  main.js  main.js.REMOVED.git-id
upkeep/ui/static_src/ui/: main.js  main.scss
upkeep/ui/templates/core/: area_form.html  area_list.html  consumable_form.html  consumable_list.html  form.html  home.html  notify_email.html  notify_email.txt  schedule_form.html  task.html  task_form.html  task_list.html
upkeep/ui/templates/ui/: base.html  home.html
upkeep/ui/tests/: ui_test.py
